添加微信端二维码扫描登录获取用户数据

--- a/src/main/resources/templates/danmu.html
+++ b/src/main/resources/templates/danmu.html
@@ -56,7 +56,7 @@
         var item={
             img:'', //图片
             info:message, //文字
-            href:'', //链接
+            href:'#', //链接
             close:true, //显示关闭按钮
             speed:15, //延迟,单位秒,默认8
 //            bottom:70, //距离底部高度,单位px,默认随机
