添加消息队列功能

--- a/src/main/resources/templates/danmu.html
+++ b/src/main/resources/templates/danmu.html
@@ -85,8 +85,8 @@
 
     //获取文件路径
 
-//        var headUrl = [[${headUrl}]];
-    var headUrl = 'http://weixin-1252100560.file.myqcloud.com/%E5%A4%B4%E5%83%8F.png?sign=xTeaddH6JkcSdhD1L+rON87pMFdhPTEyNTIxMDA1NjAmaz1BS0lES1VRN1puN1k2UFNIc0VJRnVLV1RCZXV1Z0RXYXA0VmgmZT0xNTE2MzQxNjY1JnQ9MTUxMzc0OTY2NSZyPTM0MzQyNzU4OSZmPS8lRTUlQTQlQjQlRTUlODMlOEYucG5nJmI9d2VpeGlu';
+        var headUrl = [[${headUrl}]];
+//    var headUrl = 'http://weixin-1252100560.file.myqcloud.com/%E5%A4%B4%E5%83%8F.png?sign=xTeaddH6JkcSdhD1L+rON87pMFdhPTEyNTIxMDA1NjAmaz1BS0lES1VRN1puN1k2UFNIc0VJRnVLV1RCZXV1Z0RXYXA0VmgmZT0xNTE2MzQxNjY1JnQ9MTUxMzc0OTY2NSZyPTM0MzQyNzU4OSZmPS8lRTUlQTQlQjQlRTUlODMlOEYucG5nJmI9d2VpeGlu';
     $('#wiselyForm').submit(function(e){
         e.preventDefault();
         var text = $('#wiselyForm').find('input[name="text"]').val();
