添加记录用户信息功能，重复数据从数据库中获取，不再从微信接口中获取

--- a/src/main/resources/templates/danmu.html
+++ b/src/main/resources/templates/danmu.html
@@ -108,8 +108,8 @@
 
     function handleNotification(message) {
         var messageEntity = JSON.parse(message.body);
-        console.log(messageEntity['name']);
-        addDanmu(messageEntity['name'], messageEntity['url']);
+        console.log(messageEntity['message']);
+        addDanmu(messageEntity['message'], messageEntity['url']);
     }
 
 
@@ -131,7 +131,7 @@
 //        stomp.send("/wechat/chat", {}, text);// JSON.stringify({ 'name': text })
         stomp.send("/wechat/chat", {}, JSON.stringify(
             {
-                'name': text ,
+                'message': text ,
                 'url' : headUrl
             }
         ))
